Fluid API  (#702)
* Split entry point logic into digestible pieces

* Drop blank lines

* Replace 'OptionParser' with 'var' type inference

* Banish setter and getter method names

* More fluid interfaces and less getters

* Make each void return the `GoMint` type

* Replace int literal '50' with 'Values.CLIENT_TICK_MS'

* Replace tick ms magic value with Values.CLIENT_TICK_MS

* Move world api for fluent design pattern

* Move world api for fluent design pattern

* Block fluent api changes

* Fluent scoreboard api

* Fluent plugin API

* Fluent API for player, permission and math

* Fluent enchantment API

* Fluent enchantment API

* Scheduler fluid API

* Fluent API for items and cleanup for blocks

* Fluent API for items and cleanup for blocks

* Fluent API for events

* Add fluent API to command and entity

* Add missing fluent API for locale (i18n)

* Make setFollowEntity fluent

* More fluent API for AI and transformables

* Fix some fluent API missings

* Fix visible effect fluent API

* Fix cancelled fluent API

* Fix modal true/false fluent API

* Fix populator fluent api

* Fix more fluent API missings

Co-authored-by: Felix Scholz <chapldupez@gmail.com>
Co-authored-by: Fabian Faßbender <fabian.fassbender42@googlemail.com>